--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="" />
             <span>
-              Brighton
+              CosmosCare
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -789,7 +789,7 @@
               <a href="">
                 <img src="images/logo.png" alt="" />
                 <span>
-                  Brighton
+                  CosmosCare
                 </span>
               </a>
             </div>
