--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             </div>
             <div class="detail-box">
               <h6>
-                cretive lessons
+                Cupping therapy
               </h6>
               <p>
                 Where luxury meets wellness. 
